# aspect-cf-cosmx-sr-ingest

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Jenkinsfile  README.md  pyproject.toml  setup.py
env/: README.md  env_base_conda.yml  env_notebook.txt  env_pip_requirements.txt  env_testing.txt  setup_local_conda_env.sh
env/frozen/: README.md  env_local.frozen.yml
infra/: Dockerfile  README.md
notebooks/: 00.Split_merck_anndata.py  01.Morphology_2D.py  02.Raw_anndata.py  03.Polygon.py  05.Upload_platform.py  06.Adjacency_matrix.py  example_notebook.ipynb
src/aspect_py_project_template/: __init__.py  example.py
src/scripts/: run_example.py
test/: README.md  pytest.ini  run_notebook_tests.sh
test/aspect_py_project_template_test/: example_test.py
test/jupyter_notebook_test/: notebooks_test.py
test/scripts_test/: run_example_test.py
tools/: README.md  run_all.sh  run_formatting.sh  run_linters.sh
